# lloyds-list-mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
src/lloyds_list_mcp/: __init__.py  api.py  article_fetcher.py  authenticator.py  config.py  rss_parser.py  server.py  session_manager.py
tests/: __init__.py  conftest.py  test_api.py  test_article_fetcher.py  test_rss_parser.py
